# fountain_operators

./: CHANGELOG.md  Cargo.toml  README.md
bench_data/ref_baselines/: README.md
bench_data/traces/: README.md  binary_hdpc_k14_t1.json  hdpc_gf256_k14_t1.json  random_lt_k15_t64.json
benches/: e2e_encode_decode.rs  kernel_micro.rs  operator_replay.rs  support.rs
examples/: capture_traces.rs  operators_benchmark.rs
scripts/: compare_operators.sh
src/: bench_report.rs  lib.rs  operator_testing.rs  replay.rs  scheme_operator_testing.rs  simd_data_operator.rs  slab_data_operator.rs  slab_storage.rs  trace_format.rs
src/gf_kernels/: avx2.rs  dispatch.rs  mod.rs  neon.rs  portable.rs
tests/: common.rs  scheme_delayed_replay.rs  scheme_roundtrip.rs  trace_replay.rs
