[package]
name = "fountain_operators"
version = "1.0.0"
edition = "2024"
authors = ["Shenghao Yang"]
license = "MIT"
description = "High-performance DataOperator implementations for fountain_engine"
repository = "https://github.com/shhyang/fountain_operators"
documentation = "https://github.com/shhyang/fountain_operators"
readme = "README.md"
autobenches = false
autoexamples = false
keywords = ["fountain-code", "erasure-coding", "data-operator"]
categories = ["algorithms", "encoding"]
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "LICENSE-MIT",
    "CHANGELOG.md",
]

[features]
default = ["tooling"]
## Trace/replay/testing helpers (replay, operator_testing, scheme_operator_testing, trace_format).
tooling = []
## AVX2 (x86_64) / NEON (aarch64) GF(256) kernels with portable fallback.
simd = ["dep:cpufeatures"]

[dependencies]
fountain_engine = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
cpufeatures = { version = "0.2", optional = true }

[dev-dependencies]
fountain_utility = "1.3.0"
fountain_scheme = "1.3.0"

[lints.clippy]
collapsible_if = "allow"
too_many_arguments = "allow"
useless_vec = "allow"
